<resources>
    <string name="app_name">Calendario</string>

    <!--Alert Dialog - No internet-->
    <string name="alert_dialog_title">No Internet Connection</string>
    <string name="alert_dialog_message">If you continue as offline not all functionality will be available</string>
    <string name="alert_dialog_positive">Go Offline</string>
    <string name="alert_dialog_neutral">Try Again</string>
    <string name="alert_dialog_negative">Exit</string>
    <string name="exit_alert_dialog_title">You are not logged</string>
    <string name="alert_dialog_title_server_off">We couldn\'t establish a connection</string>

    <!--Alert Dialog - server off-->
    <string name="alert_dialog_server_title">We could not establish a connection</string>
    <string name="alert_dialog_server_message">Please try again later, or continue offline</string>

    <!--SplashScreen status-->
    <string name="splash_screen_status_start">Please Wait...</string>
    <string name="splash_screen_status_in_progress">Loading Components...</string>
    <string name="splash_screen_status_end">Done!</string>

    <!--LoginScreen -->
    <string name="login_title">LOGIN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_sign_up">No account yet? Create one</string>
    <string name="login_password_error_length">Minimum 5 letters</string>
    <string name="login_password_error_empty">Password is empty</string>
    <string name="login_email_error_invalid">Invalid email</string>
    <string name="login_email_error_empty">Email is empty</string>
    <string name="login_error">Incorrect Details</string>

    <!--SignUp Screen -->
    <string name="sign_up_title">SIGN UP</string>
    <string name="sign_up_username_hint">User Name</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_confirm_password_hint">Confirm Password</string>
    <string name="sign_up_date">Date Of Birth</string>
    <string name="sign_up_link_login">Already a member? Login</string>
    <string name="sign_up_btn_sign_up">CREATE ACCOUNT</string>
    <string name="sign_up_username_error_length">Minimum 5 letters</string>
    <string name="sign_up_username_error_empty">User name is empty</string>
    <string name="sign_up_email_error_invalid">Invalid email</string>
    <string name="sign_up_email_error_empty">Email is empty</string>
    <string name="sign_up_password_error_length">Minimum 5 letters</string>
    <string name="sign_up_password_error_empty">Password is empty</string>
    <string name="sign_up_confirm_password_error_no_match">Password are not equal</string>
    <string name="sign_up_date_empty">Pick your date of birth</string>
    <string name="sign_up_successful">Account Created !</string>
    <string name="sign_up_error">We Could not create your account</string>
    <string name="sign_up_phone_number_hint">Mobile Phone</string>
    <string name="sign_up_phone_number_empty">Mobile Phone is empty</string>

    <!--Popup sms verification -->
    <string name="popup_title">confirm your mobile phone number</string>
    <string name="popup_enter_code">Enter verification code</string>
    <string name="popup_code_hint">Verification code</string>
    <string name="popup_button">confirm</string>
    <string name="popup_key_not_match">Key is not a match!</string>

    <!--New/Edit Event Screen -->
    <string name="new_event_title">NEW EVENT</string>
    <string name="edit_event_title">Event Details</string>
    <string name="new_event_title_hint">Event Title</string>
    <string name="new_event_edit_title">Edit Event</string>
    <string name="new_event_date_start_hint">Date Start</string>
    <string name="new_event_date_end_hint">Date End</string>
    <string name="new_event_time_start_hint">Time Start</string>
    <string name="new_event_time_end_hint">Time End</string>
    <string name="new_event_description_hint">Description</string>
    <string name="new_event_location_hint">Location</string>
    <string name="new_event_empty">You must fill all fields</string>
    <string name="new_event_date_error">Illegal date!</string>
    <string name="new_event_time_error">Illegal time!</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="add_picture">Add Picture</string>
    <string name="see_picture">See Picture</string>
    <string name="event_admin">Admin</string>
    <string name="new_event_add_reminder">Add Reminder</string>


    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="menu_item_month">Month View</string>
    <string name="menu_item_week">Week View</string>
    <string name="menu_item_day">Day View</string>
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_log_out">Log Out</string>
    <string name="menu_item_update">Today</string>
    <string name="menu_item_about">About</string>

    <!--Alert Dialog - exit dialog-->
    <string name="exit_dialog_title">Exit Application</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="exit_dialog_postive">YES</string>
    <string name="exit_dialog_negative">NO</string>

    <!--Contact fragnebt-->
    <string name="add_contacts">CONTACTS</string>

    <!-- Events -->
    <string name="events_title">UPCOMING EVENTS</string>
    <string name="no_events_title">You don\'t have any events!</string>

    <!-- Profile -->
    <string name="profile_password">change password</string>
    <string name="profile_phone">Mobile Phone</string>
    <string name="profile_user_name">User Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_btn_update">Update</string>

    <!-- Change Password Dialog -->
    <string name="dialog_old_password">Old Password</string>
    <string name="dialog_new_password">New Password</string>
    <string name="dialog_confirm_password">Confirm Password</string>
    <string name="dialog_success">Password Changed successfully</string>
    <string name="dialog_fail">Password doenst match!</string>
    <string name="dialog_old_fail">Old Password is not a match</string>
    <string name="dialog_update_success">Details Updated successfully</string>
    <string name="dialog_update_fail">Something went wrong while trying to update your details</string>

    <!-- About Activity -->
    <string name="about_developers">Developers: Nadav &amp; Idan Zalman</string>
    <string name="about_app_version">Version: 1.0</string>
    <string name="about_credits">Credits:\nIcons - Freepik</string>

    <!-- Tab Layout -->
    <string name="tab_event_details">EVENT DETAILS</string>
    <string name="tav_event_contacts">Add Contacts</string>

    <!--Event Details -->
    <string name="event_title">EVENT DETAILS</string>
    <string name="event_btn_show_more">Show more</string>
    <string name="event_btn_show_less">Show less</string>
    <string name="event_contacts">Participants at the event:</string>

    <!-- Image View content description -->
    <string name="contact">Contact</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="select_picture">Select Picture</string>


    <!--Reminders -->
    <string name="reminder_on_time">On Time</string>
    <string name="reminder_on_time_int">0</string>
    <string name="reminder_10_min_before">10 Minutes Before</string>
    <string name="reminder_10_min_before_int">10</string>
    <string name="reminder_one_day_before">One Day Before</string>
    <string name="reminder_one_day_before_int">1440</string>

</resources>
