<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/calendario_background"
    android:padding="10dp"
    android:layout_margin="10dp">
    <TextView
        android:text="@string/profile_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="normal|bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/tvPassword"
        android:id="@+id/OldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryLight"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:background="@drawable/container">
        <EditText
            android:id="@+id/etOldPassword"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/etNewPassword"
            android:hint="@string/dialog_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColorHint="@color/colorPrimary"
            android:layout_weight="0.25"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/OldPassword"
        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryLight"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:background="@drawable/container">
        <EditText
            android:id="@+id/etNewPassword"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/etNewPassword"
            android:hint="@string/dialog_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:fontFamily="sans-serif-condensed" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryLight"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:background="@drawable/container">
        <EditText
            android:id="@+id/etConfirmPassword"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/etNewPassword"
            android:hint="@string/dialog_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColorHint="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:fontFamily="sans-serif-condensed" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>