<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:fitsSystemWindows="true"
    android:background="@drawable/calendario_background"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <android.support.design.widget.AppBarLayout
            app:elevation="0dp"
            android:id="@+id/myAppBarLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimaryDark">

                </android.support.v7.widget.Toolbar>


            </RelativeLayout>



        </android.support.design.widget.AppBarLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/progressLayout"
            >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/primaryLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:padding="40dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imgviewUser"
                android:src="@drawable/ic_action_user"
                app:civ_border_width="0.5dp"
                app:civ_border_color="@color/colorPrimaryLight"
                />


            <!--  The edit-texts section -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_weight="0.5"
                >

                <EditText
                    android:layout_weight="0.5"
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/profile_user_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_weight="0.5"
                >

                <EditText
                    android:layout_weight="0.5"
                    android:id="@+id/etMobilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/profile_phone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_weight="0.5"
                >

                <EditText
                    android:layout_weight="0.5"
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/profile_email"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_password"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"/>


            <Button
                android:id="@+id/btnEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_btn_update"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>


        </LinearLayout>


    </LinearLayout>


</ScrollView>