<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calendario_background"
    tools:context="com.calendar_client.ui.AboutActivity">

    <android.support.design.widget.AppBarLayout
        app:elevation="0dp"
        android:id="@+id/myAppBarLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark">

            </android.support.v7.widget.Toolbar>


        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_below="@+id/myAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/calendario_icon_transperent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:id="@+id/imgViewIcon"
         />

    <TextView
        android:layout_below="@id/imgViewIcon"
        android:text="@string/about_developers"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNames"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/about_app_version"
        android:gravity="start"
        android:layout_below="@id/tvNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvVersion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/about_credits"
        android:layout_below="@id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvThanks"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:gravity="start"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>

</RelativeLayout>
