<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/calendario_background"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.calendar_client.ui.LoginActivity"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/calendario_icon_transperent"
        android:layout_gravity="center"
        android:padding="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp" />

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:text="@string/login_title"-->
            <!--android:id="@+id/tvTitle"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:textSize="30sp"-->
            <!--android:layout_margin="5dp"-->
            <!--android:padding="5dp"-->
            <!--android:fontFamily="sans-serif-smallcaps"-->
            <!--android:textStyle="bold" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryLight"
        android:background="@color/whiteOpacity"
        android:padding="6dp"
        android:layout_above="@+id/password"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_margin="6dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:gravity="start"
            android:textColor="@color/colorPrimaryLight"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email_hint"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryLight"
        android:background="@color/whiteOpacity"
        android:padding="6dp"
        android:layout_above="@+id/btnLogin"
        android:layout_margin="6dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="textVisiblePassword"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/login_password_hint"
        android:id="@+id/etPassword"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/btnLogin"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_above="@+id/tvSignUp"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:id="@+id/tvSignUp"
        android:clickable="true"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin" />

</LinearLayout>
</ScrollView>
